# rust_mpc

./: CMakeLists.txt  Cargo.toml  README.md  package.xml  setup.cfg
config/: sim.yaml
data/: Silverstone_centerline.csv  Spielberg_raceline.csv
launch/: launch_mpc.py  mpc.rviz
rust_mpc/: load_raceline.py  mpc_node.py
src/: create_solver.py  mpc_node.rs
src/mpc_controller/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  mpc_controller_bindings.h  mpc_controller_bindings.hpp  optimizer.yml
src/mpc_controller/icasadi_mpc_controller/: Cargo.toml
src/mpc_controller/icasadi_mpc_controller/src/: lib.rs
src/mpc_controller/src/: lib.rs
