<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rust_mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alexkaravev@gmail.com">alex</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


   <build_depend>rclrs</build_depend>
  <build_depend>rosidl_runtime_rs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclrs_example_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
  <exec_depend>rclrs</exec_depend>
  <exec_depend>rosidl_runtime_rs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclrs_example_msgs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
